# CVRowDetection

./: .env.example  .gitignore  HANDOVER.md  LEGACY_debug_visualizer.py  LEGACY_fft2d_detector.py  LEGACY_visual_verify_new.py  LICENSE  README.md  TODO.md  ablation.csv  annotate.py  benchmark.py  cli.py  detect_rows.py  evaluate_blocks.py  evaluate_gt.py  fft_detector.py  generate_training_data.py  geo_utils.py  hough_detector.py  image_preprocessor.py  map_annotator.py  prepare_block_dataset.py  prepare_dataset.py  prepare_ftw_dataset.py  pyproject.toml  requirements.txt  results.csv  row_locator.py  test_angle_conversion.py  tile_fetcher.py  visual_verify.py  visual_verify_new.py
block_detection/: config.py  encoder.py  predict_blocks.py  train_blocks.py
block_detection/checkpoints/: block_head_orig.pth
blocks/: __init__.py  region_detection.py
data/: nz_wine_regions.json
detection/: __init__.py  config.py  encoder.py  predict_blocks.py  train_blocks.py  types.py
gui/: README.md  app.py  config.py  server.py
models/: README.md  download_models.py
relevant_research/: Contents.txt
scripts/: check_dimension_mismatch.py
tests/: conftest.py  test_blocks_delete_integration.py  test_evaluate_gt_matching.py  test_phase_correction_tracker_gating.py  test_predict_load_model.py  test_tracking_metrics.py  test_tracking_metrics_edges.py  test_tracking_storage.py  test_tracking_storage_json.py
tracking/: __init__.py  hooks.py  metrics.py  storage.py
training/: dataset.py  model.py  predict.py  train.py
vinerow/: __init__.py  config.py  pipeline.py  types.py
(+73 files in other folders)
