[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vinerow", "vinerow.loaders", "vinerow.acquisition", "vinerow.preprocessing",
            "vinerow.orientation", "vinerow.ridge", "vinerow.candidates", "vinerow.tracking",
            "vinerow.fitting", "vinerow.detection", "vinerow.postprocessing", "vinerow.debug",
            "gui", "gui.routers", "gui.services",
            "training",
            "blocks",
            "tracking",
            "vinerow.elevation"]

[project]
name = "cvrowdetection"
version = "1.0.0"
description = "Automated vine row detection from aerial/satellite imagery"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
gui = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
cvrowdetect = "cli:main"
